# wemulate

./: .buildinfo  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  Makefile  README.md  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  sitemap.xml
.github/workflows/: build-publish-doc.yml  publish-package.yml  publish_documentation.yml  test-python.yml
_modules/: index.html
_sources/dev/: authors.rst.txt  developer-interface.rst.txt
_sources/user/: install.rst.txt
_static/: documentation_options.js
config/: wemulate.yml.example
dev/: api.html  authors.html  developer-interface.html  incoming-outgoing-explanation.html
dev/api/: index.html
dev/developer-interface/: index.html
dev/incoming-outgoing-explanation/: index.html
docs/: api.rst  buildDocs.sh  conf.py  conf.py.orig  index.md  index.rst
docs/dev/: api.md  api.rst  authors.rst  contributing.rst  developer-interface.md  developer-interface.rst  further-information.rst  incoming-outgoing-explanation.md  incoming-outgoing-explanation.rst
docs/getting-started/: install.md  quickstart.md
docs/hw/: di-1000.md  di-1000.rst  hw.rst
docs/user/: install.rst  quickstart.rst
getting-started/install/: index.html
getting-started/quickstart/: index.html
hw/: di-1000.html  hw.html
hw/di-1000/: index.html
install/: install.sh
search/: search_index.json
tests/: test_wemulate.py
user/: install.html  quickstart.html
wemulate/: main.py
(+59 files in other folders)
