[tool.poetry]
name = "wemulate"
version = "2.0.2"
description = "A modern WAN Emulator"
authors = ["Julian Klaiber <julian.klaiber@ost.ch>", "Severin Dellsperger <severin.dellsperger@ost.ch>"]
license = "GNU General Public License v3.0"
readme = "README.md"
homepage = "https://wemulate.github.io/wemulate"
documentation = "https://wemulate.github.io/wemulate"
repository = "https://github.io/wemulate/wemulate"
packages = [
    { include = "wemulate" },
]

[tool.poetry.scripts]
wemulate = "wemulate.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "0.6.1"
jinja2 = "3.1.2"
pyyaml = "6.0"
colorlog = "6.6.0"
netifaces = "0.11.0"
SQLAlchemy = "1.4.3"
pyroute2 = "0.7.1"
tcconfig = "0.27.1"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
black = "22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
